# exercise1-markaren

./: CMakeLists.txt  README.md  main.cpp
include/exercise/: greet.hpp  person.hpp
include/personLib/: Greet.hpp  Person.hpp
src/: CMakeLists.txt
src/exercise/: greet.cpp  person.cpp
src/personLib/: Greet.cpp  Person.cpp
